--- a/src/login/login.css
+++ b/src/login/login.css
@@ -22,7 +22,7 @@ h2{
     color:#4d4a4a;
 }
 
-#email
+#email1
 {
     border: none;
     width:80%;
@@ -30,8 +30,9 @@ h2{
     outline: none;
     border-bottom: rgb(56, 55, 55) 1px solid;
     line-height: 20px;
+    margin-top: 40px;
 }
-#password
+#password1
 {
     line-height: 20px;
     border: none;
@@ -52,6 +53,7 @@ h2{
     width:120px;
     border-radius: 5px;
     height: 40px;
+    margin-top: 10px;
 }
 #log:hover
 {
@@ -69,6 +71,7 @@ h2{
       text-align: left;
       margin-left: 30px;
       color:#80868b;
+      margin-top: 40px;
     
       padding-bottom: -30px;
   }
