--- a/src/dashboard/dashboard.css
+++ b/src/dashboard/dashboard.css
@@ -72,7 +72,7 @@ h3{
 {
     height: 3rem;
     border-radius: 16px;
-    border:black 2px solid;
+    border:white 0.5px solid;
     outline: none;
     padding-left: 10px;
     font-size: 20px;
@@ -90,7 +90,7 @@ height: 150px;
 width: 400px;
 padding-left: 20px;
 display: inline-block;
-border:2px solid black;
+border:0.5px solid white;
 border-top:0px;
 font-size: 20px;
 outline: none;
