--- a/src/dashboard/dashboard.css
+++ b/src/dashboard/dashboard.css
@@ -85,8 +85,9 @@ h3{
 
 }
 #notes {
-resize: none;
-min-height: 80px; 
+resize:none;
+/* min-height: 80px;  */
+height: 200px;
 width: 400px;
 padding-left: 20px;
 display: inline-block;
@@ -94,7 +95,7 @@ border:0.5px solid white;
 border-top:0px;
 font-size: 20px;
 outline: none;
-overflow:'hidden';
+
 border-bottom-left-radius: 23px;
 border-bottom-right-radius: 23px;
 border-top-left-radius: 23px;
