--- a/src/signup/signup.css
+++ b/src/signup/signup.css
@@ -117,6 +117,7 @@ h2{
     margin-left: 100px;
     margin-top: 15px;
     width:100px;
+    border-radius: 5px;
     height: 30px;
 }
 #sign:hover
@@ -134,4 +135,17 @@ h2{
 {
     font-size: 17px;
     color: rgb(223, 94, 94);
+}
+
+@media only screen and (max-width:450px)
+{
+    .login
+    {
+        width: 390px;
+        height: 400px;
+    }
+    #sign
+    {
+        width: 85px;
+    }
 }
