--- a/src/signup/signup.css
+++ b/src/signup/signup.css
@@ -106,7 +106,12 @@ h2{
      
 }
 
-
+#name:focus
+{
+    border:none;
+    border-bottom: #0067B8 1px solid;
+     
+}
 
 #sign
 {
@@ -141,11 +146,29 @@ h2{
 {
     .login
     {
-        width: 390px;
-        height: 400px;
+        margin-top: 130px;
+        width: 370px;
+        height: 380px;
     }
     #sign
     {
         width: 85px;
+        margin-right: 5px;
+    }
+    #name
+    {
+        font-size: 16px;
+    }
+    #email
+    {
+        font-size: 16px;
+    }
+    #password
+    {
+        font-size: 16px;
+    }
+    #confirm_password
+    {
+        font-size: 16px;
     }
 }
