--- a/src/login/login.css
+++ b/src/login/login.css
@@ -1,9 +1,13 @@
+
+@import url('https://fonts.googleapis.com/css2?family=Fredericka+the+Great&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Bitter:wght@700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Dancing+Script:wght@700&display=swap');
 #login
 {
     height: 400px;
     margin-left: auto;
     margin-right: auto;
-    margin-top: 150px;
+    margin-top: 50px;
     margin-bottom: auto;
     width: 500px;
     border: 1px #E9E9E9 outset;
@@ -12,8 +16,17 @@
     text-align: center;
     font-family: 'Noto Serif', serif;
     
-    box-shadow: #969695 2px 2px 1px;
+    box-shadow: #363636 5px 5px 2px;
     
+}
+#container
+{
+    background-image: url('./top-view-photo-of-coffee-cup-on-yellow-surface-3803950.jpg');
+    background-size:cover;
+   overflow: hidden;
+   height: 100vh;
+   max-width: 100%;
+
 }
 h2{
 
@@ -81,11 +94,36 @@ h2{
   }
 
 
-  @media only screen and (max-width:450px)
+  #logo-1
+  {
+      margin-left: 50px;
+      width: 120px;
+      height: 110px;
+    
+  }
+  
+
+  
+  #img
+  {
+      text-align: center;
+      margin-top: 50px;
+    
+
+  }
+  h3
+  {
+      margin-top: 30px;
+      font-family: 'Dancing Script', cursive;
+      font-weight: bold;
+      font-size: 60px;
+      color: rgb(231, 37, 37);
+  }
+  @media only screen and (max-width:500px)
   {
       #login
       {
-          margin-top: 130px;
+          margin-top: 90px;
           width: 370px;
           height: 380px;
 
@@ -105,4 +143,19 @@ h2{
       {
           font-size: 17px;
       }
+
+      #container
+      {
+          background-image: url('./ScreenShot_20200712182605.png');
+          background-size: cover;
+      }
+
+      h3
+  {
+      margin-top: 30px;
+      font-family: 'Fredericka the Great', cursive;
+      font-weight: bold;
+      font-size: 40px;
+      color: rgb(231, 37, 37);
+  }
   }
