--- a/src/dashboard/dashboard.css
+++ b/src/dashboard/dashboard.css
@@ -124,6 +124,26 @@ background-color: #dedede71;
 }
 
 
+#logo1
+{
+    margin-left: 50px;
+    width: 100px;
+    height: 90px;
+}
+
+#logo2
+{
+    
+    height: 40px;
+    margin-top: 30px;
+    margin-left: 20px;
+}
+
+#imgs
+{
+    display: flex;
+}
+
 #add
 {
     background-color: #017CFA; 
@@ -170,7 +190,7 @@ background-color: #dedede71;
 }
 
 
-@media only screen and (max-width:450px)
+@media only screen and (max-width:550px)
 {
      #content
     {
@@ -215,5 +235,21 @@ background-color: #dedede71;
         height: 35px;
         margin-left: 40px;
         margin-right: 30px;
+    }
+
+    #logo1
+    {
+        margin-top: 20px;
+        margin-left: 20px;
+        width: 80px;
+        height: 75px;
+    }
+    
+    #logo2
+    {
+        width: 150px;
+        height: 25px;
+        margin-top: 43px;
+        margin-left: 10px;
     }
 }
