--- a/src/signup/signup.css
+++ b/src/signup/signup.css
@@ -197,7 +197,7 @@ h2{
         background-image: url('./ScreenShot_20200712182605.png');
         background-size: cover;
     }
-    h3
+    #pick
     {
         margin-top: 30px;
         font-family: 'Fredericka the Great', cursive;
